--- a/css/style.css
+++ b/css/style.css
@@ -118,9 +118,10 @@ html, body {
   padding: 2rem;
 }
 .popup__text h1 {
+  margin-top: -60px;
   font-size: 2rem;
   font-weight: 600;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   text-transform: uppercase;
   color: #0A0A0A;
 }
